--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.3.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
